--- a/app.json
+++ b/app.json
@@ -52,9 +52,10 @@
       "value": "10",
       "required": true
     },
-    "MAX_TIME_TO_WAIT_FOR_TORRENTS_TO_START": {
+    "TG_UP_LIMIT": {
       "description": "should be an integer. Number of seconds to wait before cancelling a torrent.",
-      "required": false
+      "value": "1700000000",
+      "required": true
     },
     "COMPLETED_STR": {
       "description": "Character to use as a completed progress",
@@ -65,60 +66,29 @@
       "required": false
     },
     "MEGA_ENABLE": {
-      "description": "should be an URL accepting the FormParams {i}, {m}, and {t}",
+      "description": "MEGA CONFIG",
       "required": true
     },
     "MEGA_API": {
-      "description": "Enter your custom leech command like /leech@botname and so on. Default is /leech",
+      "description": "MEGA CONFIG",
       "required": false
     },
-    "SAVE_THUMBNAIL": {
-      "description": "For custom thumbnail Command. default is /savethumbnail",
+    "MEGA_UNAME": {
+      "description": "MEGA CONFIG",
       "required": false
     },
-    "CLEAR_THUMBNAIL": {
-      "description": "For Delete Thumbnail Command. Default is /clearthumbnail",
+    "MEGA_PASS": {
+      "description": "MEGA CONFIG",
       "required": false
     },
-    "INDEX_LINK": {
+    "LEECH_ENABLED": {
       "description": "Enter your index link:",
-      "required": false
+      "required": true
     },
-    "GLEECH_COMMAND": {
+    "RCLONE_ENABLED": {
       "description": "Enter your custom gleech command like /gleech1@urgroupname and so on. Default is /gleech",
-      "required": false
-    },
-    "TELEGRAM_LEECH_COMMAND_G": {
-      "description": "Enter your custom tleech command like /tleech1@urgroupname and so on. Default is /tleech",
-      "required": false
-    },
-    "YTDL_COMMAND": {
-      "description": "Enter your custom ytdl command like ytdl1@urgroupname and so on. Default is /ytdl.",
-      "required": false
-    },
-    "PYTDL_COMMAND_G": {
-      "description": "Enter your custom pytdl command like pytdl1@urgroupname and so on. Default is /pytdl.",
-      "required": false
-    },
-    "CANCEL_COMMAND_G": {
-      "description": "Enter your custom cancel command like cancel@urgroupname and so on. Default is /cancel.",
-      "required": false
-    },
-    "GET_SIZE_G": {
-      "description": "Enter your custom getsize command like getsize@urgroupname and so on. Default is /getsize.",
-      "required": false
-    },
-    "RCLONE_CONFIG": {
-      "description": "Enter your copied text from rclone config. Compulsory for /gleech as well as /tleech command ",
-      "required": false
-    },
-    "DESTINATION_FOLDER": {
-      "description": "Enter your Cloud folder NAME(not ID😅) in which you want to upload/store your files.",
-      "required": false
-    },
-    "CUSTOM_FILE_NAME": {
-      "description": "fill with name u want to prefix the file name like ur channel username🙊, keep empty for do nothing, but add to ur config vars even without input.",
-      "required": false
+      "required": true
+
     }
   },
   "stack": "container"
